--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,54 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 40fr 60fr;
+}
+
+
+.grid-item-left {
+  margin-top: 25%;
+  font-size: 4rem;
+  text-align: right;
+  padding-right: 4rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.grid-item-right {
+  font-size: 1.25rem;
+  line-height: 1.25;
+  padding-right: 4rem;
+}
+
+@media screen and (max-width: 767px) {
+  .grid-container {
+    grid-template-columns: 100fr;
+  }
+
+  .grid-item-left,
+  .grid-item-right {
+    padding-right: 0;
+    text-align: left;
+  }
+
+  .grid-item-right {
+    font-size: 0.9rem;
+  }
+
+  .grid-item-left {
+    margin-top: 0rem;
+    font-size: 2rem;
+  }
+}
+
+/* pre[class*="language-"]>code {
+  border-left: 5px solid rgb(5 126 5) !important;
+  box-shadow: -1px 0px 0px 0px rgb(0 49 0), 0px 0px 0px 1px #dfdfdf !important;
+} */
+
+.token.operator {
+  background: none !important;
+}
