--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,11 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+::selection {
+  color: yellow;
+  background: darkslategrey !important;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
