--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,10 +1,22 @@
 .features {
-  display: block;
-  padding: 2rem 0;
-  width: 100%;
+    display: block;
+    padding: 2rem 0;
+    width: 100%;
 }
 
 .featureSvg {
-  height: 200px;
-  width: 200px;
+    height: 200px;
+    width: 200px;
+}
+
+.flexContainer {
+    display: flex;
+    margin: 0 auto;
+    max-width: 400px;
+    justify-content: space-between;
+}
+
+.mtop2 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
