--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,74 +6,84 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --ifm-color-primary: #2e8555;
+    --ifm-color-primary-dark: #29784c;
+    --ifm-color-primary-darker: #277148;
+    --ifm-color-primary-darkest: #205d3b;
+    --ifm-color-primary-light: #33925d;
+    --ifm-color-primary-lighter: #359962;
+    --ifm-color-primary-lightest: #3cad6e;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 ::selection {
-  color: yellow;
-  background: darkslategrey !important;
+    color: yellow;
+    background: darkslategrey !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --ifm-color-primary: #25c2a0;
+    --ifm-color-primary-dark: #21af90;
+    --ifm-color-primary-darker: #1fa588;
+    --ifm-color-primary-darkest: #1a8870;
+    --ifm-color-primary-light: #29d5b0;
+    --ifm-color-primary-lighter: #32d8b4;
+    --ifm-color-primary-lightest: #4fddbf;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 40fr 60fr;
+    display: grid;
+    grid-template-columns: 40fr 60fr;
 }
 
 
 .grid-item-left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .grid-item-right {
-  font-size: 1.25rem;
-  line-height: 1.25;
-  padding-right: 4rem;
+    font-size: 1.25rem;
+    line-height: 1.25;
+    padding-right: 4rem;
+}
+
+.language-js {
+    font-size: 10px;
 }
 
 @media screen and (max-width: 767px) {
-  .grid-container {
-    grid-template-columns: 100fr;
-  }
+    .grid-container {
+        grid-template-columns: 100fr;
+    }
 
-  .grid-item-left,
-  .grid-item-right {
-    padding-right: 0;
-    text-align: left;
-  }
+    .grid-item-left,
+    .grid-item-right {
+        padding-right: 0;
+        text-align: left;
+    }
 
-  .grid-item-right {
-    font-size: 0.9rem;
-  }
+    .grid-item-right {
+        font-size: 0.5rem;
+    }
 
-  .grid-item-left {
-    margin-top: 0rem;
-    font-size: 2rem;
-  }
+    .grid-item-left {
+        margin-top: 0rem;
+        font-size: 2rem;
+    }
+
+    .language-js {
+        width: 85vw;
+        margin: 0 auto;
+        font-size: 12px !important;
+    }
 }
 
 /* pre[class*="language-"]>code {
@@ -82,5 +92,5 @@
 } */
 
 .token.operator {
-  background: none !important;
+    background: none !important;
 }
