--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -35,9 +35,10 @@
 }
 
 .buttons {
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 .subTitle {
@@ -46,7 +47,7 @@
 
 @media screen and (min-width: 966px) {
     .subTitle {
-        padding: 0 10rem !important;
+        padding: 0 8rem !important;
     }
 }
 
